CSS updates to fix overflow / scrolling issues

--- a/src/components/Site.css
+++ b/src/components/Site.css
@@ -7,10 +7,11 @@
 }
 
 .site-row {
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-content: stretch;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .site-padding {
